--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Kelola Mitra - SILOKERNF</title>
+    <title>About - SILOKERNF</title>
     <link rel="icon" type="image/png" href="https://thumbs.gfycat.com/HandmadeFavoriteIndianringneckparakeet-small.gif">
 
     <!-- Bootstrap CSS -->
@@ -40,7 +40,8 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
+            <a class="nav-link" href="index.html"><i class="fa fa-home" aria-hidden="true"></i>
+              Home</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="lowongan1.html">Lowongan Baru</a>
@@ -54,9 +55,9 @@
           <li class="nav-item">
               <a class="nav-link" href="berita.html">Berita</a>
           </li>
-            <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-            </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="about.html">About<span class="sr-only">(current)</a>
+          </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search">
@@ -67,96 +68,55 @@
   <!-- Navbar -->
 
   <!-- isi -->
-    <!-- Keloker -->
-
-
-  <div class="container">
-      <nav aria-label="breadcrumb" style="padding-top: 30px;">
-        <ol class="breadcrumb bread justify-content-end bg-white">
-        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-        <li class="breadcrumb-item"><a href="admin.html">Admin</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Kelola Mitra</li>
-        </ol>
+  <div class="container bout">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb bread justify-content-end bg-white">
+      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">About</li>
+      </ol>
     </nav>
-  </div>
+  </div>  
 
-  <div class="container">
-    <div class="table-responsive">
-      <table class="table table-bordered table-hover text-center bg-white">
-        <thead>
-          <tr class="table-warning">
-            <th>No</th>
-            <th>Nama Perusahaan</th>
-            <th>Bidang Usaha</th>
-            <th>Kontak Person</th>
-            <th>Email</th>
-            <th>Telepon</th>
-            <th>Alamat Web</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>PT ABC</td>
-            <td>Ahmad Fikri</td>
-            <td>Property</td>
-            <td>fikri@gmail.com</td>
-            <td>082298227422</td>
-            <td>https://abc.com</td>
-            <td><a href="#">Details</a></br>
-            </a> <a href="#">Edit </a></br>
-            <a href="#">Delete</a>
-            </td>
-          </tr>
-          <tr>
-            <tr>
-              <td>2</td>
-              <td>PT ABC</td>
-              <td>Ahmad Fikri</td>
-              <td>Property</td>
-              <td>fikri@gmail.com</td>
-              <td>082298227422</td>
-              <td>https://abc.com</td>
-              <td><a href="#">Details</a></br>
-              </a> <a href="#">Edit </a></br>
-              <a href="#">Delete</a>
-              </td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>PT ABC</td>
-              <td>Ahmad Fikri</td>
-              <td>Property</td>
-              <td>fikri@gmail.com</td>
-              <td>082298227422</td>
-              <td>https://abc.com</td>
-              <td><a href="#">Details</a></br>
-              </a> <a href="#">Edit </a></br>
-              <a href="#">Delete</a>
-              </td>
-            </tr>
-            <tr>
-              <td>4</td>
-              <td>PT ABC</td>
-              <td>Ahmad Fikri</td>
-              <td>Property</td>
-              <td>fikri@gmail.com</td>
-              <td>082298227422</td>
-              <td>https://abc.com</td>
-              <td><a href="#">Details</a></br>
-              </a> <a href="#">Edit </a></br>
-              <a href="#">Delete</a>
-              </td>
-            </tr>
-        </tbody>
-      </table>
+  <!-- isi -->
+    <div class="container bg-white bout2">
+        <h1 class="b">About our Team</h1>
+        <div class="garis"></div>
+        <div class="row">
+            <div class="col-12">
+              <div class="row">
+                <div class="col-lg profil">
+                  <img src="https://i.postimg.cc/1RV8WFt0/ainunt.jpg" alt="">
+                  <h3 class="nama1">Ainun Mardiyah</h3>
+                  <a href="#"><i class="fa fa-2x fa-facebook-square" style="color: #1877F2;" aria-hidden="true"></i></a>
+                  <a href="#"><i class="fa fa-2x fa-instagram" style="color: #E1306C;" aria-hidden="true"></i></a>
+                  <a href="https://github.com/ainun20235" target="_blank"><i class="fa fa-2x fa-github" style="color: #595959;" aria-hidden="true"></i></a>
+                </div>
+                <div class="col-lg profil">
+                  <img src="https://i.postimg.cc/fb82ypQN/ichsan.jpg" alt="">
+                  <h3 class="nama1">Ichsan Rustiansyach Yusuf</h3>
+                  <a href="#"><i class="fa fa-2x fa-facebook-square" style="color: #1877F2;" aria-hidden="true"></i></a>
+                  <a href="#"><i class="fa fa-2x fa-instagram" style="color: #E1306C;" aria-hidden="true"></i></a>
+                  <a href="https://github.com/Ichsan-desg" target="_blank"><i class="fa fa-2x fa-github" style="color: #595959;" aria-hidden="true"></i></a></div>
+              </div>
+              <div class="row">
+                <div class="col-lg profil">
+                  <img src="https://i.postimg.cc/wMnfQmwT/sulton.jpg" alt="">
+                  <h3 class="nama1">Muhammad Fajar Sulthon Asnawi</h3>
+                  <a href="https://facebook.com/profile.php?id=100037416893260&_rdc=1&_rdr" target="_blank"><i class="fa fa-2x fa-facebook-square" style="color: #1877F2;" aria-hidden="true"></i></a>
+                  <a href="https://www.instagram.com/shulton_69/" target="_blank"><i class="fa fa-2x fa-instagram" style="color: #E1306C;" aria-hidden="true"></i></a>
+                  <a href="#"><i class="fa fa-2x fa-github" style="color: #595959;" aria-hidden="true"></i></a>
+                  </div>
+                <div class="col-lg profil">
+                  <img src="https://i.postimg.cc/7PnCzkQ0/mail.jpg" alt="">
+                  <h3 class="nama1">Muhammad Ismail</h3>
+                  <a href="https://facebook.com/ismailhere.7" target="_blank"><i class="fa fa-2x fa-facebook-square" style="color: #1877F2;" aria-hidden="true"></i></a>
+                  <a href="#"><i class="fa fa-2x fa-instagram" style="color: #E1306C;" aria-hidden="true"></i></a>
+                  <a href="https://github.com/hasyim404" target="_blank"><i class="fa fa-2x fa-github" style="color: #595959;" aria-hidden="true"></i></a></div>
+              </div>
+            </div>
+          </div>
     </div>
-  </div>
-
-    <!-- Keloker -->
-  <!-- /Isi -->
-
+  <!-- /isi -->
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
