--- a/form_mitra.html
+++ b/form_mitra.html
@@ -57,6 +57,9 @@
           <li class="nav-item">
               <a class="nav-link" href="berita.html">Berita</a>
           </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search">
