--- a/admin.html
+++ b/admin.html
@@ -46,7 +46,7 @@
             <a class="nav-link" href="lowongan1.html">Lowongan Baru</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Isi Loker</a>
+              <a class="nav-link" href="isi_loker.html">Isi Loker</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="DaftarMitra.html">Daftar Mitra</a>
@@ -93,13 +93,13 @@
                     </a>
                 </div>
                 <div class="col-md-2 d-flex flex-column menu btn-light">
-                    <a href="#" aria-pressed="false">
+                    <a href="ibeta.html" aria-pressed="false">
                         <i class="fa fa-plus fa-5x text-info" aria-hidden="true"></i></br>
                         <p>Isi Berita</p>
                     </a>
                 </div>
                 <div class="col-md-2 d-flex flex-column menu btn-light">
-                    <a href="#" aria-pressed="false">
+                    <a href="dabeta.html" aria-pressed="false">
                         <i class="fa fa-newspaper-o fa-5x text-info" aria-hidden="true"></i></br>
                         <p>Daftar Berita</p>
                     </a>
