--- a/isi_loker.html
+++ b/isi_loker.html
@@ -158,7 +158,7 @@
       <div class="form-group row">
         <label for="email" class="col-3 col-form-label">Email</label> 
         <div class="col-sm">
-          <input id="email" name="email" type="text" class="form-control" required placeholder="">
+          <input id="email" name="email" type="email" class="form-control" required placeholder="">
         </div>
       </div> 
   
