--- a/ibeta.html
+++ b/ibeta.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Form Menjadi Mitra - SILOKERNF</title>
+    <title>Isi Berita - SILOKERNF</title>
     <link rel="icon" type="image/png" href="https://thumbs.gfycat.com/HandmadeFavoriteIndianringneckparakeet-small.gif">
 
     <!-- Bootstrap CSS -->
@@ -78,75 +78,63 @@
         <ol class="breadcrumb bread justify-content-end bg-white">
         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
         <li class="breadcrumb-item"><a href="DaftarMitra.html">Daftar Mitra</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Form Menjadi Mitra</li>
+        <li class="breadcrumb-item active" aria-current="page">Isi Berita</li>
         </ol>
     </nav>
   </div>
 
   <div class="container">
     <fieldset style="background-color: white;">
-      <legend> Form Menjadi Mitra </legend>
+      <legend style="padding-left: 10px; font-size: 30px;"> Isi Berita </legend>
       
       <div class="container">
 
         <form  class="formm">
           <div class="form-group row">
-              <label for="user" class="col-sm-3 col-form-label">Nama Perusahaan/Organisasi</label>
+              <label for="user" class="col-sm-3 col-form-label">Judul Berita</label>
               <div class="col-sm">
                 <input type="text" class="form-control" id="username" required placeholder="">
               </div>
           </div>
 
-          <div class="form-group row">
-            <label for="select" class="col-3 col-form-label">Bidang Usaha</label> 
-            <div class="col-sm-3">
-              <select id="select" name="select" class="custom-select">
-                <option value="pegadaian">Pengadaian</option>
-                <option value="empty">Empty</option>
-                <option value="empty">Empty</option>
-                <option value="empty">Empty</option>
-              </select>
-            </div>
-          </div> 
-
             <div class="form-group row">
-              <label for="text-area" class="col-sm-3 col-form-label">Alamat Kantor</label>
+              <label for="text-area" class="col-sm-3 col-form-label">Deskripsi Berita / Isi Berita</label>
               <div class="col-sm">
                 <textarea class="form-control" id="text-area" rows="3" required placeholder=""></textarea>
               </div>  
           </div>
 
           <div class="form-group row">
-              <label for="number" class="col-3 col-form-label">Kontak Pribadi</label> 
+            <label for="number" class="col-3 col-form-label">Nama</label> 
+            <div class="col-sm">
+              <input id="number" name="number" type="text" class="form-control" required placeholder="">
+            </div>
+          </div>
+
+          <div class="form-group row">
+              <label for="number" class="col-3 col-form-label">Asal Kampus</label> 
               <div class="col-sm">
-                <input id="number" name="number" type="number" class="form-control" required placeholder="">
+                <input id="number" name="number" type="text" class="form-control" required placeholder="">
               </div>
             </div>
 
             <div class="form-group row">
-              <label for="number" class="col-3 col-form-label">No. HP/Telpon</label> 
+              <label for="number" class="col-3 col-form-label">Email</label> 
               <div class="col-sm">
                 <input id="number" name="number" type="text" class="form-control" required placeholder="">
               </div>
             </div>
             <div class="form-group row">
-              <label for="email" class="col-3 col-form-label">Email</label> 
+              <label for="email" class="col-3 col-form-label">No. HP/Telpon</label> 
               <div class="col-sm">
                 <input id="email" name="email" type="email" class="form-control" required placeholder="">
               </div>
             </div> 
 
-            <div class="form-group row">
-              <label for="web" class="col-3 col-form-label">Alamat Web</label> 
-              <div class="col-sm">
-                <input id="web" name="web" type="web" class="form-control" required placeholder="http://">
-              </div>
-            </div> 
-
             <br>
             <div class="col-12">
-              <button class="btn btn-primary" type="submit">Daftar</button> <!--belum di arahkan ke selesai pengisisan-->
-              <button class="btn btn-danger" type="reset">Reset</button>  <!--belum di arahkan ke windows alert-->
+              <button class="btn btn-primary" type="submit">Publish</button>
+              <button class="btn btn-danger" type="reset">Batal</button>
             </div>
             <br>
         </form>
