--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
                   <h3 class="nama1">Muhammad Fajar Sulthon Asnawi</h3>
                   <a href="https://facebook.com/profile.php?id=100037416893260&_rdc=1&_rdr" target="_blank"><i class="fa fa-2x fa-facebook-square" style="color: #1877F2;" aria-hidden="true"></i></a>
                   <a href="https://www.instagram.com/shulton_69/" target="_blank"><i class="fa fa-2x fa-instagram" style="color: #E1306C;" aria-hidden="true"></i></a>
-                  <a href="#"><i class="fa fa-2x fa-github" style="color: #595959;" aria-hidden="true"></i></a>
+                  <a href="https://github.com/Sulton-69" target="_blank"><i class="fa fa-2x fa-github" style="color: #595959;" aria-hidden="true"></i></a>
                   </div>
                 <div class="col-lg profil">
                   <img src="https://i.postimg.cc/7PnCzkQ0/mail.jpg" alt="">
