--- a/admin.html
+++ b/admin.html
@@ -99,7 +99,7 @@
                     </a>
                 </div>
                 <div class="col-md-2 d-flex flex-column menu btn-light">
-                    <a href="dabeta.html" aria-pressed="false">
+                    <a href="daftarberita.html" aria-pressed="false">
                         <i class="fa fa-newspaper-o fa-5x text-info" aria-hidden="true"></i></br>
                         <p>Daftar Berita</p>
                     </a>
