--- a/ibeta.html
+++ b/ibeta.html
@@ -77,7 +77,7 @@
       <nav aria-label="breadcrumb" style="padding-top: 30px;">
         <ol class="breadcrumb bread justify-content-end bg-white">
         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-        <li class="breadcrumb-item"><a href="DaftarMitra.html">Daftar Mitra</a></li>
+        <li class="breadcrumb-item"><a href="admin.html">Admin</a></li>
         <li class="breadcrumb-item active" aria-current="page">Isi Berita</li>
         </ol>
     </nav>
