--- a/ibeta.html
+++ b/ibeta.html
@@ -51,8 +51,8 @@
           <li class="nav-item">
               <a class="nav-link" href="isi_loker.html">Isi Loker</a>
           </li>
-          <li class="nav-item active">
-              <a class="nav-link" href="DaftarMitra.html">Daftar Mitra<span class="sr-only">(current)</span></a>
+          <li class="nav-item ">
+              <a class="nav-link" href="DaftarMitra.html">Daftar Mitra</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="berita.html">Berita</a>
